*unreleased*

* Revert the "git fetch --tags" change, since it didn't work as expected [Jamis Buck]

* Fix deploy:pending when using git SCM [Ryan McGeary]

* Make sure deploy:check works with :none scm (which has no default command) [Jamis Buck]

* Add debug switch for enabling conditional execution of commands [Mark Imbriaco]


*2.3.0* May 2, 2008

* Make deploy:setup obey the :use_sudo and :runner directives, and generalize the :use_sudo and :runner options into a try_sudo() helper method [Jamis Buck]

* Make sudo helper play nicely with complex command chains [Jamis Buck]

* Expand file-transfer options with new upload() and download() helpers. [Jamis Buck]

* Allow SCP transfers in addition to SFTP. [Jamis Buck]

* Use Net::SSH v2 and Net::SSH::Gateway. [Jamis Buck]

* Added #export method for git SCM [Phillip Goldenburg]

* For query_revision, git SCM used git-rev-parse on the repo hosting the Capfile, which may NOT be the same tree as the actual source reposistory. Use git-ls-remote instead to resolve the revision for checkout. [Robin H. Johnson]

* Allow :ssh_options hash to be specified per server [Jesse Newland]

* Added support for depend :remote, :file to test for existence of a specific file [Andrew Carter]

* Ensure that the default run options are mixed into the command options when executing a command from the cap shell [Ken Collins]

* Added :none SCM module for deploying a specific directory's contents [Jamis Buck]

* Improved "copy" strategy supports local caching and pattern exclusion (via :copy_cache and :copy_exclude variables) [Jamis Buck]


*2.2.0* February 27, 2008

* Fix git submodule support to init on sync [halorgium]

* Add alternative server-centric role definition method [James Duncan Davidson]

* Add support for password prompts from the Mercurial SCM [ches]

* Add support for :max_hosts option in task definition or run() [Rob Holland <rob@inversepath.com>]
